--- a/index_old.html
+++ b/index_old.html
@@ -3,126 +3,104 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Top-Scrolling Flying Game - Responsive</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top-Scrolling Flying Game</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
       padding: 0;
       overflow: hidden;
       background: #000;
       font-family: Arial, sans-serif;
-      touch-action: none;
-    }
-
-    #container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #000;
+      width: 100vw;
+      height: 100vh;
     }
 
-    #gameWrapper {
+    #container {
       position: relative;
-      display: inline-block;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     canvas {
+      flex-shrink: 0;
       display: block;
-      background-color: #000;
+      background-color: rgb(0, 0, 0);
       touch-action: none;
-      image-rendering: crisp-edges;
-      image-rendering: pixelated;
+    }
+
+    @media (max-width: 820px) {
+
+      #score,
+      #levelIndicator,
+      #health {
+        font-size: 14px;
+      }
     }
 
     #startButton {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 16px 40px;
-      font-size: 22px;
-      z-index: 10;
-      cursor: pointer;
-      background: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-
-    #startButton.game-active {
-      top: 12px;
-      left: 12px;
-      transform: none;
-      font-size: 16px;
+      top: 10px;
+      left: 10px;
       padding: 10px 20px;
+      font-size: 16px;
+      z-index: 2;
+      cursor: pointer;
     }
 
-    #score,
-    #levelIndicator,
-    #health,
-    #gameOver,
-    #levelDisplay,
-    #powerupDisplay,
-    #bonusDisplay,
-    #warningDisplay,
-    #pauseDisplay,
-    #victory {
-      position: absolute;
-      z-index: 2;
+    /* Mobile: center start button, move to corner once game is active */
+    @media (max-width: 820px) {
+      #startButton {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 22px;
+        padding: 16px 40px;
+        z-index: 10;
+      }
+
+      #startButton.game-active {
+        top: 12px;
+        left: 12px;
+        transform: none;
+        font-size: 18px;
+        padding: 12px 24px;
+      }
     }
 
     #score {
       color: white;
+      position: absolute;
       top: 10px;
       right: 10px;
       font-size: 18px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    }
-
-    #levelIndicator {
-      color: white;
-      top: 60px;
-      right: 10px;
-      font-size: 16px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    }
-
-    #health {
-      color: white;
-      top: 60px;
-      left: 10px;
-      font-size: 16px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+      z-index: 2;
     }
 
     #gameOver {
       display: none;
+      position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       font-size: 24px;
       color: red;
       text-shadow: 0 0 10px red;
+      z-index: 2;
       text-align: center;
       line-height: 1.6;
     }
 
     #levelDisplay {
       display: none;
+      position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -150,8 +128,27 @@
       }
     }
 
+    #levelIndicator {
+      color: white;
+      position: absolute;
+      top: 60px;
+      right: 10px;
+      font-size: 16px;
+      z-index: 2;
+    }
+
+    #health {
+      color: white;
+      position: absolute;
+      top: 60px;
+      left: 10px;
+      font-size: 16px;
+      z-index: 2;
+    }
+
     #powerupDisplay {
       display: none;
+      position: absolute;
       top: 40%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -163,6 +160,7 @@
 
     #bonusDisplay {
       display: none;
+      position: absolute;
       top: 65%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -174,6 +172,7 @@
 
     #warningDisplay {
       display: none;
+      position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -200,6 +199,7 @@
 
     #pauseDisplay {
       display: none;
+      position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -211,6 +211,7 @@
 
     #victory {
       display: none;
+      position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -220,94 +221,31 @@
       z-index: 3;
       text-align: center;
       line-height: 1.4;
-      max-width: 90%;
-      padding: 20px;
-    }
-
-    @media (max-width: 768px) {
-
-      #score,
-      #levelIndicator,
-      #health {
-        font-size: 14px;
-      }
-
-      #levelDisplay {
-        font-size: 36px;
-      }
-
-      #gameOver,
-      #victory {
-        font-size: 18px;
-      }
+      max-width: 700px;
+      width: 90%;
     }
   </style>
 </head>
 
 <body>
   <div id="container">
-    <div id="gameWrapper">
-      <button id="startButton">Start Game</button>
-      <div id="score">Score: 0</div>
-      <canvas id="gameCanvas" width="800" height="600"></canvas>
-      <div id="levelIndicator">Level: 1</div>
-      <div id="health">Health: 50</div>
-      <div id="levelDisplay">Level 1</div>
-      <div id="powerupDisplay"></div>
-      <div id="bonusDisplay"></div>
-      <div id="warningDisplay">Warning!<br>Shielded Enemy!</div>
-      <div id="pauseDisplay">PAUSED</div>
-      <div id="victory">Thank you for playing!<br><br>Special thanks to Modmotif for the music.<br><br>Please submit
-        your email to download the song for remix.<br><br>&copy; 2026</div>
-      <div id="gameOver">Game Over!</div>
-    </div>
+
+    <button id="startButton">Start Game</button>
+    <div id="score">Score: 0</div>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div id="levelIndicator">Level: 1</div>
+    <div id="health">Health: 50</div>
+    <div id="levelDisplay">Level 1</div>
+    <div id="powerupDisplay"></div>
+    <div id="bonusDisplay"></div>
+    <div id="warningDisplay">Warning!<br>Shielded Enemy!</div>
+    <div id="pauseDisplay">PAUSED</div>
+    <div id="victory">Thank you for playing!<br><br>Special thanks to Modmotif for the music.<br><br>Please submit your
+      email to download the song for remix.<br><br>&copy; 2026</div>
+    <div id="gameOver">Game Over!</div>
   </div>
 
   <script>
-    // ============================================
-    // CANVAS SETUP
-    // ============================================
-    var canvas = document.getElementById("gameCanvas");
-    var ctx = canvas.getContext("2d");
-
-    // ============================================
-    // RESPONSIVE CANVAS SETUP
-    // ============================================
-    function resizeGame() {
-      var gameWrapper = document.getElementById('gameWrapper');
-      var windowWidth = window.innerWidth;
-      var windowHeight = window.innerHeight;
-
-      // Game's native resolution
-      var gameWidth = 800;
-      var gameHeight = 600;
-      var gameAspect = gameWidth / gameHeight;
-      var windowAspect = windowWidth / windowHeight;
-
-      var scale;
-      if (windowAspect > gameAspect) {
-        // Window is wider - fit to height
-        scale = windowHeight / gameHeight;
-      } else {
-        // Window is taller - fit to width
-        scale = windowWidth / gameWidth;
-      }
-
-      // Apply CSS transform to scale the entire game wrapper
-      gameWrapper.style.transform = 'scale(' + scale + ')';
-      gameWrapper.style.transformOrigin = 'center center';
-      gameWrapper.style.width = gameWidth + 'px';
-      gameWrapper.style.height = gameHeight + 'px';
-    }
-
-    // Initialize and handle resize
-    window.addEventListener('resize', resizeGame);
-
-    // Prevent scrolling on mobile
-    document.addEventListener('touchmove', function (e) {
-      e.preventDefault();
-    }, { passive: false });
-
     // ============================================
     // GAME CONFIGURATION - Easy to modify values
     // ============================================
@@ -384,8 +322,11 @@
     };
 
     // ============================================
-    // IMAGE SETUP
+    // CANVAS AND IMAGE SETUP
     // ============================================
+    var canvas = document.getElementById("gameCanvas");
+    var ctx = canvas.getContext("2d");
+
     var playerImg = new Image();
     playerImg.src = "/Xenon_3/player.png";
 
@@ -3960,9 +3901,6 @@
         }
       }
     });
-
-    // Initialize responsive canvas after all elements are loaded
-    resizeGame();
   </script>
 </body>
 
